plugins {
	id 'org.springframework.boot' version '3.5.3' // upgrade from 3.3.5
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
}

group = 'ca.gbc.comp3095'
version = '0.0.1-SNAPSHOT'
description = 'task-service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// ===============================
	// Core
	// ===============================
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// ===============================
	// Swagger / OpenAPI
	// ===============================
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'


	// ===============================
	// Lombok
	// ===============================
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'


	// ===============================
	// Testing
	// ===============================
	testImplementation 'org.springframework.boot:spring-boot-starter-test'


	// ===============================
	// Testcontainers
	// ===============================
	testImplementation 'org.testcontainers:junit-jupiter:1.20.3'
	testImplementation 'org.testcontainers:mongodb:1.20.3'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// implementation 'org.springframework.boot:spring-boot-starter-webmvc'

	// testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
	// testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	// testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

	// SECURITY (REQUIRED to override defaults)
	implementation 'org.springframework.boot:spring-boot-starter-security'
}

tasks.named('test') {
	useJUnitPlatform()
}
